tests/pos/test-class-1.dic
class TestClass {
    func int main() {
        // Properly formatted class
        printstr("success");
        return 0;
    }
}